--- a/src/azure-cli/requirements.py3.windows.txt
+++ b/src/azure-cli/requirements.py3.windows.txt
@@ -1,13 +1,13 @@
 adal==1.2.7
 antlr4-python3-runtime==4.7.2
-applicationinsights==0.11.9
+applicationinsights==0.11.7
 argcomplete==1.11.1
 asn1crypto==0.24.0
 azure-appconfiguration==1.1.1
 azure-batch==10.0.0
-azure-cli-core==2.23.0
+azure-cli-core==2.24.0
 azure-cli-telemetry==1.0.6
-azure-cli==2.23.0
+azure-cli==2.24.0
 azure-common==1.1.22
 azure-core==1.13.0
 azure-cosmos==3.2.0
@@ -49,7 +49,7 @@ azure-mgmt-eventhub==4.1.0
 azure-mgmt-hdinsight==2.2.0
 azure-mgmt-imagebuilder==0.4.0
 azure-mgmt-iotcentral==4.1.0
-azure-mgmt-iothub==0.12.0
+azure-mgmt-iothub==2.0.0
 azure-mgmt-iothubprovisioningservices==0.2.0
 azure-mgmt-keyvault==9.0.0
 azure-mgmt-kusto==0.3.0
@@ -71,12 +71,12 @@ azure-mgmt-redhatopenshift==0.1.0
 azure-mgmt-redis==7.0.0rc1
 azure-mgmt-relay==0.1.0
 azure-mgmt-reservations==0.6.0
-azure-mgmt-resource==16.1.0
+azure-mgmt-resource==18.0.0
 azure-mgmt-search==8.0.0
 azure-mgmt-security==0.6.0
 azure-mgmt-servicebus==6.0.0
 azure-mgmt-servicefabric==0.5.0
-azure-mgmt-servicefabricmanagedclusters==1.0.0b1
+azure-mgmt-servicefabricmanagedclusters==1.0.0
 azure-mgmt-signalr==0.4.0
 azure-mgmt-sql==0.26.0
 azure-mgmt-sqlvirtualmachine==0.5.0
@@ -95,7 +95,6 @@ certifi==2019.6.16
 cffi==1.14.4
 chardet==3.0.4
 colorama==0.4.1
-ConfigArgParse==0.14.0
 cryptography==3.3.2
 fabric==2.4.0
 humanfriendly==9.1
@@ -122,8 +121,10 @@ PyGithub==1.38
 PyJWT==1.7.1
 PyNaCl==1.4.0
 pyOpenSSL==19.0.0
+pyreadline==2.1
 python-dateutil==2.8.0
 pytz==2019.1
+pywin32==300
 requests-oauthlib==1.2.0
 requests==2.22.0
 scp==0.13.2
@@ -136,5 +137,4 @@ vsts-cd-manager==1.0.2
 vsts==0.1.25
 wcwidth==0.1.7
 websocket-client==0.56.0
-wrapt==1.11.2
 xmltodict==0.12.0
