--- a/src/azure-cli/requirements.py3.windows.txt
+++ b/src/azure-cli/requirements.py3.windows.txt
@@ -32,7 +32,7 @@ azure-mgmt-cognitiveservices==6.3.0
 azure-mgmt-compute==20.0.0
 azure-mgmt-consumption==2.0.0
 azure-mgmt-containerinstance==1.5.0
-azure-mgmt-containerregistry==3.0.0rc17
+azure-mgmt-containerregistry==8.0.0
 azure-mgmt-containerservice==11.2.0
 azure-mgmt-core==1.2.1
 azure-mgmt-cosmosdb==6.3.0
