--- a/src/azure-cli/azure/cli/command_modules/synapse/tests/latest/recordings/test_sql_pool_threat_policy.yaml
+++ b/src/azure-cli/azure/cli/command_modules/synapse/tests/latest/recordings/test_sql_pool_threat_policy.yaml
@@ -344,7 +344,7 @@ interactions:
       Connection:
       - keep-alive
       ParameterSetName:
-      - --name --workspace-name --resource-group --security-alert-policy-name
+      - --name --workspace-name --resource-group --sec-alert-policy-name
       User-Agent:
       - AZURECLI/2.22.1 azsdk-python-mgmt-synapse/2.0.0 Python/3.7.4 (Windows-10-10.0.19041-SP0)
     method: GET
