--- a/src/azure-cli/azure/cli/command_modules/synapse/tests/latest/recordings/test_sql_pool_tde.yaml
+++ b/src/azure-cli/azure/cli/command_modules/synapse/tests/latest/recordings/test_sql_pool_tde.yaml
@@ -15,7 +15,7 @@ interactions:
       Content-Type:
       - application/json
       ParameterSetName:
-      - --status --name --workspace-name --resource-group --transparent-data-encryption-name
+      - --status --name --workspace-name --resource-group --trans-data-en-name
       User-Agent:
       - AZURECLI/2.22.1 azsdk-python-mgmt-synapse/2.0.0 Python/3.7.4 (Windows-10-10.0.19041-SP0)
     method: PUT
@@ -63,7 +63,7 @@ interactions:
       Connection:
       - keep-alive
       ParameterSetName:
-      - --name --workspace-name --resource-group --transparent-data-encryption-name
+      - --name --workspace-name --resource-group --trans-data-en-name
       User-Agent:
       - AZURECLI/2.22.1 azsdk-python-mgmt-synapse/2.0.0 Python/3.7.4 (Windows-10-10.0.19041-SP0)
     method: GET
