--- a/src/azure-cli/azure/cli/command_modules/synapse/tests/latest/recordings/test_sql_pool_tde.yaml
+++ b/src/azure-cli/azure/cli/command_modules/synapse/tests/latest/recordings/test_sql_pool_tde.yaml
@@ -15,7 +15,7 @@ interactions:
       Content-Type:
       - application/json
       ParameterSetName:
-      - --status --name --workspace-name --resource-group --trans-data-encry
+      - --status --name --workspace-name --resource-group --transparent-data-encryption-name
       User-Agent:
       - AZURECLI/2.24.0 azsdk-python-mgmt-synapse/2.0.0 Python/3.7.4 (Windows-10-10.0.19041-SP0)
     method: PUT
@@ -31,7 +31,7 @@ interactions:
       content-type:
       - application/json; charset=utf-8
       date:
-      - Fri, 28 May 2021 08:55:12 GMT
+      - Tue, 01 Jun 2021 09:20:08 GMT
       expires:
       - '-1'
       pragma:
@@ -63,7 +63,7 @@ interactions:
       Connection:
       - keep-alive
       ParameterSetName:
-      - --name --workspace-name --resource-group --trans-data-encry
+      - --name --workspace-name --resource-group --transparent-data-encryption-name
       User-Agent:
       - AZURECLI/2.24.0 azsdk-python-mgmt-synapse/2.0.0 Python/3.7.4 (Windows-10-10.0.19041-SP0)
     method: GET
@@ -79,7 +79,7 @@ interactions:
       content-type:
       - application/json; charset=utf-8
       date:
-      - Fri, 28 May 2021 08:55:13 GMT
+      - Tue, 01 Jun 2021 09:20:09 GMT
       expires:
       - '-1'
       pragma:
