--- a/src/azure-cli/azure/cli/command_modules/synapse/tests/latest/recordings/test_sql_audit_policy.yaml
+++ b/src/azure-cli/azure/cli/command_modules/synapse/tests/latest/recordings/test_sql_audit_policy.yaml
@@ -11,7 +11,7 @@ interactions:
       Connection:
       - keep-alive
       ParameterSetName:
-      - --workspace-name --resource-group --blob-audit-ply
+      - --workspace-name --resource-group --blob-auditing-policy-name
       User-Agent:
       - AZURECLI/2.24.0 azsdk-python-mgmt-synapse/2.0.0 Python/3.7.4 (Windows-10-10.0.19041-SP0)
     method: GET
@@ -58,7 +58,7 @@ interactions:
       - keep-alive
       ParameterSetName:
       - --state --storage-account --retention-days --workspace-name --resource-group
-        --blob-audit-ply
+        --blob-auditing-policy-name
       User-Agent:
       - AZURECLI/2.24.0 azsdk-python-mgmt-synapse/2.0.0 Python/3.7.4 (Windows-10-10.0.19041-SP0)
     method: GET
@@ -105,7 +105,7 @@ interactions:
       - keep-alive
       ParameterSetName:
       - --state --storage-account --retention-days --workspace-name --resource-group
-        --blob-audit-ply
+        --blob-auditing-policy-name
       User-Agent:
       - AZURECLI/2.24.0 azsdk-python-azure-mgmt-resource/18.0.0 Python/3.7.4 (Windows-10-10.0.19041-SP0)
     method: GET
@@ -148,7 +148,7 @@ interactions:
       - keep-alive
       ParameterSetName:
       - --state --storage-account --retention-days --workspace-name --resource-group
-        --blob-audit-ply
+        --blob-auditing-policy-name
       User-Agent:
       - AZURECLI/2.24.0 azsdk-python-azure-mgmt-resource/18.0.0 Python/3.7.4 (Windows-10-10.0.19041-SP0)
     method: GET
@@ -191,7 +191,7 @@ interactions:
       - keep-alive
       ParameterSetName:
       - --state --storage-account --retention-days --workspace-name --resource-group
-        --blob-audit-ply
+        --blob-auditing-policy-name
       User-Agent:
       - AZURECLI/2.24.0 azsdk-python-azure-mgmt-resource/18.0.0 Python/3.7.4 (Windows-10-10.0.19041-SP0)
     method: GET
@@ -234,7 +234,7 @@ interactions:
       - keep-alive
       ParameterSetName:
       - --state --storage-account --retention-days --workspace-name --resource-group
-        --blob-audit-ply
+        --blob-auditing-policy-name
       User-Agent:
       - AZURECLI/2.24.0 azsdk-python-azure-mgmt-storage/18.0.0 Python/3.7.4 (Windows-10-10.0.19041-SP0)
     method: GET
@@ -281,7 +281,7 @@ interactions:
       - keep-alive
       ParameterSetName:
       - --state --storage-account --retention-days --workspace-name --resource-group
-        --blob-audit-ply
+        --blob-auditing-policy-name
       User-Agent:
       - AZURECLI/2.24.0 azsdk-python-azure-mgmt-resource/18.0.0 Python/3.7.4 (Windows-10-10.0.19041-SP0)
     method: GET
@@ -324,7 +324,7 @@ interactions:
       - keep-alive
       ParameterSetName:
       - --state --storage-account --retention-days --workspace-name --resource-group
-        --blob-audit-ply
+        --blob-auditing-policy-name
       User-Agent:
       - AZURECLI/2.24.0 azsdk-python-azure-mgmt-resource/18.0.0 Python/3.7.4 (Windows-10-10.0.19041-SP0)
     method: GET
@@ -367,7 +367,7 @@ interactions:
       - keep-alive
       ParameterSetName:
       - --state --storage-account --retention-days --workspace-name --resource-group
-        --blob-audit-ply
+        --blob-auditing-policy-name
       User-Agent:
       - AZURECLI/2.24.0 azsdk-python-azure-mgmt-resource/18.0.0 Python/3.7.4 (Windows-10-10.0.19041-SP0)
     method: GET
@@ -412,7 +412,7 @@ interactions:
       - '0'
       ParameterSetName:
       - --state --storage-account --retention-days --workspace-name --resource-group
-        --blob-audit-ply
+        --blob-auditing-policy-name
       User-Agent:
       - AZURECLI/2.24.0 azsdk-python-azure-mgmt-storage/18.0.0 Python/3.7.4 (Windows-10-10.0.19041-SP0)
     method: POST
@@ -469,7 +469,7 @@ interactions:
       - application/json
       ParameterSetName:
       - --state --storage-account --retention-days --workspace-name --resource-group
-        --blob-audit-ply
+        --blob-auditing-policy-name
       User-Agent:
       - AZURECLI/2.24.0 azsdk-python-mgmt-synapse/2.0.0 Python/3.7.4 (Windows-10-10.0.19041-SP0)
     method: PUT
@@ -522,7 +522,7 @@ interactions:
       - keep-alive
       ParameterSetName:
       - --state --storage-account --retention-days --workspace-name --resource-group
-        --blob-audit-ply
+        --blob-auditing-policy-name
       User-Agent:
       - AZURECLI/2.24.0 azsdk-python-mgmt-synapse/2.0.0 Python/3.7.4 (Windows-10-10.0.19041-SP0)
     method: GET
@@ -569,7 +569,7 @@ interactions:
       - keep-alive
       ParameterSetName:
       - --state --storage-account --retention-days --workspace-name --resource-group
-        --blob-audit-ply
+        --blob-auditing-policy-name
       User-Agent:
       - AZURECLI/2.24.0 azsdk-python-mgmt-synapse/2.0.0 Python/3.7.4 (Windows-10-10.0.19041-SP0)
     method: GET
@@ -615,7 +615,7 @@ interactions:
       Connection:
       - keep-alive
       ParameterSetName:
-      - --workspace-name --resource-group --blob-audit-ply
+      - --workspace-name --resource-group --blob-auditing-policy-name
       User-Agent:
       - AZURECLI/2.24.0 azsdk-python-mgmt-synapse/2.0.0 Python/3.7.4 (Windows-10-10.0.19041-SP0)
     method: GET
@@ -661,7 +661,7 @@ interactions:
       Connection:
       - keep-alive
       ParameterSetName:
-      - --state --workspace-name --resource-group --blob-audit-ply
+      - --state --workspace-name --resource-group --blob-auditing-policy-name
       User-Agent:
       - AZURECLI/2.24.0 azsdk-python-mgmt-synapse/2.0.0 Python/3.7.4 (Windows-10-10.0.19041-SP0)
     method: GET
@@ -715,7 +715,7 @@ interactions:
       Content-Type:
       - application/json
       ParameterSetName:
-      - --state --workspace-name --resource-group --blob-audit-ply
+      - --state --workspace-name --resource-group --blob-auditing-policy-name
       User-Agent:
       - AZURECLI/2.24.0 azsdk-python-mgmt-synapse/2.0.0 Python/3.7.4 (Windows-10-10.0.19041-SP0)
     method: PUT
@@ -767,7 +767,7 @@ interactions:
       Connection:
       - keep-alive
       ParameterSetName:
-      - --state --workspace-name --resource-group --blob-audit-ply
+      - --state --workspace-name --resource-group --blob-auditing-policy-name
       User-Agent:
       - AZURECLI/2.24.0 azsdk-python-mgmt-synapse/2.0.0 Python/3.7.4 (Windows-10-10.0.19041-SP0)
     method: GET
@@ -813,7 +813,7 @@ interactions:
       Connection:
       - keep-alive
       ParameterSetName:
-      - --state --workspace-name --resource-group --blob-audit-ply
+      - --state --workspace-name --resource-group --blob-auditing-policy-name
       User-Agent:
       - AZURECLI/2.24.0 azsdk-python-mgmt-synapse/2.0.0 Python/3.7.4 (Windows-10-10.0.19041-SP0)
     method: GET
@@ -859,7 +859,7 @@ interactions:
       Connection:
       - keep-alive
       ParameterSetName:
-      - --workspace-name --resource-group --blob-audit-ply
+      - --workspace-name --resource-group --blob-auditing-policy-name
       User-Agent:
       - AZURECLI/2.24.0 azsdk-python-mgmt-synapse/2.0.0 Python/3.7.4 (Windows-10-10.0.19041-SP0)
     method: GET
