--- a/src/azure-cli/azure/cli/command_modules/rdbms/templates/postgresql_githubaction_template.yaml
+++ b/src/azure-cli/azure/cli/command_modules/rdbms/templates/postgresql_githubaction_template.yaml
@@ -11,4 +11,4 @@ jobs:
         with:
           server-name: POSTGRESQL_SERVER_NAME
           connection-string: ${{ secrets.AZURE_POSTGRESQL_CONNECTION_STRING }}
-          sql-file: POSTGRESQL_FILE_NAME
+          plsql-file: POSTGRESQL_FILE_NAME
