--- a/src/azure-cli/azure/cli/command_modules/rdbms/templates/mysql_githubaction_template.yaml
+++ b/src/azure-cli/azure/cli/command_modules/rdbms/templates/mysql_githubaction_template.yaml
@@ -9,5 +9,5 @@ jobs:
       - uses: azure/mysql@v1
         with:
           server-name: MYSQL_SERVER_NAME
-          connection-string: ${{ secrets.AZURE_MYSQL_CONNECTION_STRING }}
+          connection-string: MYSQL_CONNECTION_STRING
           sql-file: MYSQL_FILE_NAME
