--- a/src/azure-cli/azure/cli/command_modules/rdbms/templates/postgresql_githubaction_template.yaml
+++ b/src/azure-cli/azure/cli/command_modules/rdbms/templates/postgresql_githubaction_template.yaml
@@ -9,5 +9,5 @@ jobs:
       - uses: azure/postgresql@v1
         with:
           server-name: POSTGRESQL_SERVER_NAME
-          connection-string: ${{ secrets.AZURE_POSTGRESQL_CONNECTION_STRING }}
+          connection-string: POSTGRESQL_CONNECTION_STRING
           plsql-file: POSTGRESQL_FILE_NAME
