--- a/src/azure-cli/requirements.py3.Darwin.txt
+++ b/src/azure-cli/requirements.py3.Darwin.txt
@@ -46,6 +46,7 @@ azure-mgmt-devtestlabs==4.0.0
 azure-mgmt-dns==8.0.0
 azure-mgmt-eventgrid==9.0.0
 azure-mgmt-eventhub==4.1.0
+azure-mgmt-extendedlocation==1.0.0b2
 azure-mgmt-hdinsight==7.0.0
 azure-mgmt-imagebuilder==0.4.0
 azure-mgmt-iotcentral==4.1.0
