{CODEOWNERS} Update CODEOWNERS (#18455)
* Update CODEOWNERS

* Update .github/CODEOWNERS

Co-authored-by: Yishi Wang <yishiwang@microsoft.com>

* Update .github/CODEOWNERS

Co-authored-by: Yishi Wang <yishiwang@microsoft.com>

Co-authored-by: Yishi Wang <yishiwang@microsoft.com>

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,8 +1,8 @@
 # See for instructions on this file https://help.github.com/articles/about-codeowners/
 
-*help.py @msyyc @jiasli @jsntcy
-*help.yaml @msyyc @jiasli @jsntcy
-*help.yml @msyyc @jiasli @jsntcy
+*help.py @kairu-ms @jiasli @jsntcy
+*help.yaml @kairu-ms @jiasli @jsntcy
+*help.yml @kairu-ms @jiasli @jsntcy
 
 /linter_exclusions.yml @jsntcy @kairu-ms
 
@@ -12,7 +12,7 @@
 /scripts/live_test @qwordy
 /src/azure-cli-testsdk/ @jsntcy @jiasli @kairu-ms @qwordy
 /src/azure-cli-core/ @jiasli @Juliehzl @fengzhou-msft @evelyn-ys @jsntcy @houk-ms @kairu-ms
-/src/azure-cli-core/azure/cli/core/extension/ @msyyc @fengzhou-msft
+/src/azure-cli-core/azure/cli/core/extension/ @jsntcy @kairu-ms
 /src/azure-cli-core/azure/cli/core/_profile.py @jiasli @evelyn-ys
 /src/azure-cli-core/azure/cli/core/adal_authentication.py @jiasli @evelyn-ys
 /src/azure-cli-core/azure/cli/core/msal_authentication.py @jiasli @evelyn-ys
@@ -36,17 +36,17 @@
 /src/azure-cli/azure/cli/command_modules/dms/ @temandr @binuj
 /src/azure-cli/azure/cli/command_modules/eventhubs/ @v-ajnava
 /src/azure-cli/azure/cli/command_modules/eventgrid/ @Juliehzl @evelyn-ys @VidyaKukke
-/src/azure-cli/azure/cli/command_modules/extension/ @fengzhou-msft @msyyc
+/src/azure-cli/azure/cli/command_modules/extension/ @jsntcy @kairu-ms
 /src/azure-cli/azure/cli/command_modules/feedback/ @fengzhou-msft @jiasli
 /src/azure-cli/azure/cli/command_modules/hdinsight/ @aim-for-better @Juliehzl @kairu-ms
 /src/azure-cli/azure/cli/command_modules/iot/ @digimaun
-/src/azure-cli/azure/cli/command_modules/keyvault/ @evelyn-ys @jiasli @houk-ms
-/src/azure-cli/azure/cli/command_modules/monitor/ @msyyc @jsntcy @kairu-ms
-/src/azure-cli/azure/cli/command_modules/natgateway/ @khannarheams @jsntcy @kairu-ms @msyyc
-/src/azure-cli/azure/cli/command_modules/network/ @jsntcy @kairu-ms @msyyc
+/src/azure-cli/azure/cli/command_modules/keyvault/ @evelyn-ys @jiasli
+/src/azure-cli/azure/cli/command_modules/monitor/ @jsntcy @kairu-ms
+/src/azure-cli/azure/cli/command_modules/natgateway/ @khannarheams @jsntcy @kairu-ms
+/src/azure-cli/azure/cli/command_modules/network/ @jsntcy @kairu-ms
 /src/azure-cli/azure/cli/command_modules/policyinsights/ @cheggert
-/src/azure-cli/azure/cli/command_modules/privatedns/ @jsntcy @kairu-ms @msyyc
-/src/azure-cli/azure/cli/command_modules/profile/ @jiasli @evelyn-ys @fengzhou-msft
+/src/azure-cli/azure/cli/command_modules/privatedns/ @jsntcy @kairu-ms
+/src/azure-cli/azure/cli/command_modules/profile/ @jiasli @evelyn-ys
 /src/azure-cli/azure/cli/command_modules/rdbms/ @arde0708 @Juliehzl @evelyn-ys @DaeunYim
 /src/azure-cli/azure/cli/command_modules/resource/ @Juliehzl @zhoxing-ms
 /src/azure-cli/azure/cli/command_modules/role/ @jiasli @evelyn-ys @jsntcy @fengzhou-msft
