Add support for bicep files in TS

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,7 +9,17 @@
             "program": "${workspaceRoot}/src/azure-cli/azure/cli/__main__.py",
             "cwd": "${workspaceRoot}",
             "args": [
-                "--help"
+                "ts",
+                "create",
+                "--name",
+                "testTS",
+                "--resource-group",
+                "Gokul-TestRG4",
+                "--template-file",
+                "C:/Users/Gopremra/Downloads/storage.bicep",
+                //"C://Users/Gopremra/Desktop/footest.json",
+                "--version",
+                "1"
             ],
             "console": "integratedTerminal",
             "debugOptions": [
