--- a/src/azure-cli/requirements.py3.Darwin.txt
+++ b/src/azure-cli/requirements.py3.Darwin.txt
@@ -16,6 +16,7 @@ azure-functions-devops-build==0.0.22
 azure-graphrbac==0.60.0
 azure-identity==1.5.0
 azure-keyvault-administration==4.0.0b3
+azure-keyvault-keys==4.3.1
 azure-keyvault==1.1.0
 azure-loganalytics==0.1.0
 azure-mgmt-advisor==2.0.1
